# scryfall-ai-search-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-publish-image.yml
scryfall_ai_search_bot/: __init__.py  bot.py  controller.py  logging.py  settings.py  setup_logging.py
scryfall_ai_search_bot/agents/: build_scryfall_reference.ipynb  query_builder_agent.py  scryfall_search_reference.md  set_retrieval_agent.py
scryfall_ai_search_bot/scryfall_api_request_builder/: __init__.py  base.py  model.py  request.py
scryfall_ai_search_bot/scryfall_api_request_builder/cards/: __init__.py
scryfall_ai_search_bot/scryfall_api_request_builder/sets/: __init__.py
tests/: test_cards_named.py  test_scryfall_request_builder.py
tests/__snapshots__/test_scryfall_request_builder/: test_cards_named.json  test_sets.json
