[project]
name = "scryfall-ai-search-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Ben", email = "benjamin.colt.tarr@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
	"pydantic (>=2.11.5,<3.0.0)",
	"httpx (>=0.28.1,<0.29.0)",
	"pydantic-ai (>=0.2.15,<0.3.0)",
	"discord-py (>=2.5.2,<3.0.0)",
	"pydantic-settings (>=2.9.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "scryfall_ai_search_bot:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
html2text = ">=2025.4.15,<2026.0.0"
syrupy = "^4.9.1"

[tool.pytest.ini_options]
addopts = "--tb=long -vv --maxfail=1 --showlocals --snapshot-update"

[tool.black]
line-length = 110